Add nav partial

--- a/ui/html/base.tmpl.html
+++ b/ui/html/base.tmpl.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <header>
+            {{template "nav" .}}
             <h1><a href='/'>Notes</a></h1>
         </header>
         <main>
