--- a/ui/html/base.tmpl.html
+++ b/ui/html/base.tmpl.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset='utf-8'>
         <title>{{template "title" .}}</title>
+        <!-- Styles -->
+        <link rel='stylesheet' href='/static/css/main.css'>
     </head>
     <body>
         <header>
