--- a/ui/html/pages/home.tmpl.html
+++ b/ui/html/pages/home.tmpl.html
@@ -1,9 +1,8 @@
 {{define "title"}}Home{{end}}
 
 {{define "main"}}
-<h2>Latest</h2>
-<ul>
-    <li>A note</li>
-    <li>Another note</li>
-</ul>
+<section>
+    <h2>Latest</h2>
+    {{ template "notes" . }}
+</section>
 {{end}}
